@@ -1,3 +1,8 @@
+2012-06-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/action/body_go_to_point.cpp:
+	- デバッグメッセージ修正
+
 2012-06-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/player/ball_object.cpp:
